Фикс checkstyle